# gl-template

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh  run.sh
application/: application.cpp  application.hpp
core/: main.cpp
core/backend/: backend.cpp  backend.hpp  gl.cpp  gl.hpp  glfw_integration.cpp  glfw_integration.hpp
core/common/: animation.hpp  enums.hpp  object.hpp
core/editor/: editor.cpp  editor.hpp
core/libs/: molson.h
core/math/: delta.cpp  delta.hpp  math.cpp  math.hpp
core/physics/: collision.cpp  collision.hpp
core/renderer/: renderer.cpp  renderer.hpp
core/res/shaders/: object.frag
core/utils/: input.cpp  input.hpp  log.cpp  log.hpp  resource_manager.cpp  resource_manager.hpp  singleton.hpp
